fix dark mode2

--- a/frontend-dashboard/src/index.css
+++ b/frontend-dashboard/src/index.css
@@ -1,1 +1,8 @@
 @import "tailwindcss";
+
+@theme {
+    --font-sans: "Inter", ui-sans-serif, system-ui, sans-serif;
+}
+
+@varian dark (&:where(.dark, .dark *));
+
